--- a/assignment25sep.ipynb
+++ b/assignment25sep.ipynb
@@ -17,7 +17,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#Practical question's"
+        "#theory question's"
       ],
       "metadata": {
         "id": "Y1XxImX4xHdW"
